Add unit tests setup