@@ -2,7 +2,6 @@ package org.vladkanash.util;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
@@ -28,6 +27,6 @@ public class Config {
     }
 
     public List<String> getList(String key) {
-        return Arrays.asList(get(key).split(LIST_DELIMITER));
+        return List.of(get(key).split(LIST_DELIMITER));
     }
 }
